--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    env:
+      NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,12 +45,12 @@ jobs:
           if-no-files-found: error
 
       - name: Push NuGet packages
-        if: ${{ secrets.NUGET_API_KEY != '' }}
-        run: dotnet nuget push "artifacts/packages/*.nupkg" --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key "${{ secrets.NUGET_API_KEY }}"
+        if: ${{ env.NUGET_API_KEY != '' }}
+        run: dotnet nuget push "artifacts/packages/*.nupkg" --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key "${{ env.NUGET_API_KEY }}"
 
       - name: Publish symbol packages
-        if: ${{ secrets.NUGET_API_KEY != '' }}
-        run: dotnet nuget push "artifacts/packages/*.snupkg" --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key "${{ secrets.NUGET_API_KEY }}"
+        if: ${{ env.NUGET_API_KEY != '' }}
+        run: dotnet nuget push "artifacts/packages/*.snupkg" --source https://api.nuget.org/v3/index.json --skip-duplicate --api-key "${{ env.NUGET_API_KEY }}"
 
       - name: Create GitHub release
         if: startsWith(github.ref, 'refs/tags/')
